start applying angular logic to md select box component

--- a/directives/selectBox/selectBox.html
+++ b/directives/selectBox/selectBox.html
@@ -1,11 +1,24 @@
+<p>{{select.currentlySelected.join()}}</p><br><br>
+
 <div class="container">
     <div class="col-xs-5 materialSelect inline empty">
         <ul class="select" required>
-            <li data-selected="true" data-value="default">Choose something...</li>
-            <li data-value="0">Example 1</li>
-            <li data-value="1">Example 2</li>
-            <li data-value="2">Example 3</li>
+            
+            <li data-selected="true" 
+            	data-value="default"
+            	ng-click="select.clearSelections()">
+            	Choose something...
+            </li>
+
+            <li ng-repeat="option in select.options" 
+            	data-value="{{$index}}"
+            	ng-click="select.updateOptions(option)">
+            	{{option.name}}
+            </li>
+            
         </ul>
         <div class="message">Please select something</div>
     </div>
 </div>
+
+
