--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body ng-app="retrieve" ng-controller="main">
 
 	<!-- have a page container directive that holds the actual index ?-->
-	<p>{{foo}}</p>
+	<!-- <p>{{foo}}</p> -->
 
 	<!-- test out component works -->
 	<select-box></select-box>
