--- a/directives/selectBox/selectBox.html
+++ b/directives/selectBox/selectBox.html
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="col-xs-5 materialSelect inline empty">
-        <ul class="select" required>
+        <ul class="select">
             
             <li data-selected="true" 
             	data-value="default"
