fix single select box

--- a/directives/mdSingleSelect/singleSelect.html
+++ b/directives/mdSingleSelect/singleSelect.html
@@ -1,4 +1,4 @@
-<p>{{select.currentlySelected.join()}}</p><br><br>
+<p>{{selected}}</p><br><br>
 
 <div class="single-select-container">
   <div class="col-xs-5 materialSingleSelect inline empty">
