--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 
 	<!--import google maps and bootstrap stuff-->
-	<script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
@@ -44,7 +44,14 @@
 
 		<br>
 
-		<single-select options="[
+		<single-select 
+			selected="''"
+			options="[
+				{name:'Example 1', value:false},
+				{name:'Example 1', value:false},
+				{name:'Example 1', value:false},
+				{name:'Example 1', value:false},
+				{name:'Example 1', value:false},
 				{name:'Example 1', value:false},
 				{name:'Example 1', value:false},
 				{name:'Example 2', value:false},
