more work on single select box

--- a/directives/mdSingleSelect/singleSelect.html
+++ b/directives/mdSingleSelect/singleSelect.html
@@ -1,7 +1,7 @@
 <p>{{selected}}</p><br><br>
 
 <div class="single-select-container">
-  <div class="col-xs-5 materialSingleSelect inline empty">
+  <div class="materialSingleSelect inline empty">
     <ul class="select">
       <li data-selected="true">Choose something...</li>
       <li ng-repeat="option in select.options"
