--- a/index.html
+++ b/index.html
@@ -47,10 +47,19 @@
 
 		<br> -->
 
-		<single-select 
+		<single-select
+			currentid="1" 
 			selected="''"
 			options="[
 				{name:'Example 1', value:false},
+				{name:'Example 2', value:false},
+				{name:'Example 3', value:false},
+			]"></single-select>
+
+		<single-select
+			currentid="2" 
+			selected="''"
+			options="[
 				{name:'Example 1', value:false},
 				{name:'Example 2', value:false},
 				{name:'Example 3', value:false},
