--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
 		<single-select
 			currentid="1" 
+			placeholder="'Choose something...'"
 			selected="''"
 			options="[
 				{name:'Example 1', value:false},
@@ -59,7 +60,14 @@
 		<single-select
 			currentid="2" 
 			selected="''"
+			placeholder="'Choose something...'"
 			options="[
+				{name:'Example 1', value:false},
+				{name:'Example 2', value:false},
+				{name:'Example 3', value:false},
+				{name:'Example 1', value:false},
+				{name:'Example 2', value:false},
+				{name:'Example 3', value:false},
 				{name:'Example 1', value:false},
 				{name:'Example 2', value:false},
 				{name:'Example 3', value:false},
